--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <script>
         // 設定你的 Google Apps Script 網址
-        const GAS_URL = '你的_Google_Apps_Script_網址_貼在這裡';
+        const GAS_URL = 'https://script.google.com/macros/s/AKfycbwPLWcCJhnE_ZnnIbCgk9hNcjo6ikLDR_rzFGCiBFPamXapAj3e-fg1YiJo1THW08T4/exec';
 
         async function fetchData() {
             try {
