--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>尖山發電廠 CEMS 戰情儀表板</title>
+    <title>尖山發電廠 CEMS 監控畫面</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     
@@ -60,7 +60,7 @@
 <body>
 
     <header>
-        <h1>尖山發電廠 CEMS 戰情儀表板</h1>
+        <h1>尖山發電廠 CEMS 監控畫面</h1>
         <div class="sub-info" id="updateTime">連線中...</div>
     </header>
 
@@ -146,7 +146,7 @@
 
     <script>
         // 設定你的 Google Apps Script 網址
-        const GAS_URL = '你的_Google_Apps_Script_網址_貼在這裡';
+        const GAS_URL = 'https://script.google.com/macros/s/AKfycbwPLWcCJhnE_ZnnIbCgk9hNcjo6ikLDR_rzFGCiBFPamXapAj3e-fg1YiJo1THW08T4/exec';
 
         const LAT = 23.575; 
         const LON = 119.665;
