--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>尖山發電廠 CEMS 戰情儀表板</title>
+    <title>怪獸電力公司最新報價</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     
@@ -69,7 +69,7 @@
 <body>
 
     <header>
-        <h1>尖山發電廠 CEMS 監控畫面</h1>
+        <h1>怪獸電力公司最新報價</h1>
         <div class="sub-info" id="updateTime">連線中...</div>
     </header>
 
